# play

./: .gitignore  AUTOMATION_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  CPT_DAPT_QLoRA_minimal.ipynb  ENERGY_LOGGING_GUIDE.md  GETTING_STARTED.md  LICENSE  MULTI_GPU_GUIDE.md  Makefile  README.md  RELEASE_NOTES_v1.0.md  SETUP_DOCUMENTATION.md  pyproject.toml  pytest.ini  requirements.txt
Benchmark/: model_config.yaml  run_all_benchmarks.sh
Benchmark/Archit-Eval/: script.py
Benchmark/HumanEval/: README.md  run_humaneval_api.py  setup_and_run.py  setup_humaneval.py  setup_rust_benchmark.sh
Benchmark/HumanEval/human_eval/: evaluation.py
Benchmark/Polyglot/: README.md  polyglot
Benchmark/Results/glm-45-air-avinash-10k/Hyperswitch-3x-output/: glm-45-air-avinash-10k_code_generation.json
Benchmark/Results/glm-45-air-avinash-10k/hyperswitch-3x-output/: glm-45-air-avinash-10k_all_tasks_summary.txt  glm-45-air-avinash-10k_code_debugging.json  glm-45-air-avinash-10k_code_understanding.json
Benchmark/Results/glm-45-air-avinash-10k/polyglot/: results_summary.txt
Benchmark/Results/glm-45-air-curriculum-learning/hyperswitch-3x-output/: results_summary.txt
Benchmark/Results/glm-45-air-curriculum-learning/polyglot/: results_summary.txt
Benchmark/Results/glm-45-air-curriculum-learning/tau/: results_summary.txt
Benchmark/Results/glm-45-air-curriculum-learning/tau2/: results_summary.txt
Benchmark/Results/glm-45-air-qlora/Hyperswitch-3x-output/: glm45air-qlora_all_tasks_summary.txt  glm45air-qlora_code_generation.json  glm45air-qlora_code_understanding.json
Benchmark/Results/glm-45-air-qlora/hyperswitch-3x-output/: glm45air-qlora_code_debugging.json
Benchmark/Results/glm-45-air-vs-glm-45-air-lora/hyperswitch/: glm-45-air_vs_glm-45-air-lora_all_tasks_summary.txt  (+3 more)
Benchmark/Results/glm-45-air-vs-glm-45-air-lora/hyperswitch-3x-output/: glm-45-air_all_tasks_summary.txt  glm-45-air_code_debugging.json  glm-45-air_code_generation.json  glm-45-air_code_understanding.json  glm45air-lora_code_debugging.json  glm45air-lora_code_generation.json  glm45air-lora_code_understanding.json
Benchmark/RustEvo/: README.md  setup.py
Benchmark/RustEvo/Evaluate/: eval_RAG_rq4.py  eval_models_rq1.py  eval_models_rq1_o1mini.py  eval_models_rq3.py
Benchmark/RustEvo/script /: eval_models_rq1.py  eval_models_rq3.py
Benchmark/SWE-Bench/: README.md  script.py
Benchmark/hyperswitch-benchmark/: aggregate_data.json  config.yaml  eval_3.py  inference_3.py
Benchmark/tau-bench/: README.md  run.py
Benchmark/tau-bench/tau_bench/: run.py  types.py
Benchmark/tau2-bench/: README.md
Claude_code_task/: .gitignore  END_TO_END_FLOW.md  Prompt.md  README.md  orchestrator.py  pr_analyzer.sh  pr_setup.py  run_pipeline.py  run_pr  runner.py
Claude_code_task/automation_2/: README.md  orchestrator.py  run_pr
Claude_code_task/automation_2/scripts/: api_config.py  checkpoint_manager.py  context_diff.py  eval_pipeline.py  llm_client.py  pr_setup.py  prompt_builder.py  tier3_diff.py
Claude_code_task/automation_2/templates/: Prompt.md
Claude_code_task/pr/: original_changes.diff  task_pr_9298.md
Trails/: train_distributed_v1.py  train_distributed_v2.py
chat_templates/: default.jinja  gemma.jinja
configs/: config_base.yaml  config_run.yaml  deepseed_z2.json  deepspeed_z2.json  run_bnb.yaml  run_dapt.yaml  run_distributed.yaml  run_gemma27b_internal.yaml  run_unsloth.yaml  rust_evo_config.yaml  test_rendered.yaml
configs/Samples/: run_distributed_optimized.yaml  run_distributed_v1.yaml  test_rendered.yaml
data-generation/: Makefile  README.md
data-generation/configs/: config_base.yaml  config_run.yaml
data-generation/prompts/: answer_gen.py  judge_eval.py  question_gen.py
data-generation/qna_core/: chunking.py  endpoints.py  loaders.py  prompt_loader.py  validate.py
data-generation/scripts/: 00_prepare_corpus.py  10_generate_qna.py  20_validate_citations.py  30_judge_eval.py  40_export_sft.py  clean_qna.py  extract_questions_answers.py  filter_by_confidence.py
data/processed/: anchor_instr.jsonl
docs/: GETTING_STARTED.md  README.md  rust_evo_setup.md
docs/advanced/: AUTOMATION_GUIDE.md
docs/configuration/: README.md
docs/dapt/: README.md
docs/multi-gpu/: README.md
docs/setup/: ACCELERATE_SETUP_GUIDE.md  README.md  SETUP_DOCUMENTATION.md  UNSLOTH_FIX_DOCUMENTATION.md
docs/sft/: README.md
docs/tasks/: dapt-cpt.md  embedding-fine-tuning.md  llm-fine-tuning.md  mixed-training.md  supervised-fine-tuning.md
embeddingFT/: README.md
embeddingFT/configs/: run_embedding_mnrl.yaml
embeddingFT/scripts/: __init__.py  train_embed.py
examples/: README.md
examples/basic-sft/: README.md  config.yaml
metrics/: __init__.py  nvml_utils.py  token_callback.py  token_counter.py
outputs-1/run-dapt-3/checkpoint-20/: README.md
outputs-1/tb/: events.out.tfevents.1756991034.6fc4c37f081a.216751.0  events.out.tfevents.1756992038.6fc4c37f081a.217841.0  events.out.tfevents.1756992239.6fc4c37f081a.218353.0  events.out.tfevents.1757005097.6fc4c37f081a.228331.0  events.out.tfevents.1757411816.6fc4c37f081a.483906.0  events.out.tfevents.1757418957.6fc4c37f081a.542448.0  events.out.tfevents.1757420226.6fc4c37f081a.547277.0
package/: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  install.sh  pyproject.toml  test.yaml
package/sft_play/: __init__.py  cli.py  evaluate.py  infer.py  process.py  train.py  version.py
results/: .gitkeep
scripts/: collators_cpt.py  datasets_cpt.py  eval.py  infer.py  ingest_docx.py  merge_lora.py  process_data.py  render_template.py  run_rust_evo.py  setup_rust_evo.sh  style_prompt.py  train.py  train_distributed.py
scripts/utils/: model_store.py
tests/: README.md  __init__.py  conftest.py  merge_lora_merge_infer.py  test_commands.py  test_configs.py  test_dapt_integration.py  test_distributed_training.py  test_embeddingFT.py  test_evaluation_optimization.py  test_functional.py  test_mixed_training.py  test_simple_mixed.py  test_unsloth.py
workflows/: batch_process.sh  quick_start.sh
xyne_play/: __init__.py  cli.py  setup.py
(+25 files in other folders)
