[project]
name = "xyne-llm-play"
version = "2.0.0"
description = "Universal LLM training suite: SFT, DAPT, multi-GPU, embeddings finetuning, and RL—ready for research & production."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Play Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.2",
    "transformers>=4.42",
    "datasets",
    "accelerate",
    "peft",
    "bitsandbytes",
    "jinja2",
    "evaluate",
    "rouge-score",
    "sacrebleu",
    "tensorboard",
    "PyYAML>=6.0.1",
    "tqdm>=4.66.0",
    "scipy>=1.11.0",
    "numpy>=1.26.0",
    "pandas>=2.2.1",
    "scikit-learn>=1.4.0",
    "unsloth",
    "tf-keras",
    "sacremoses",
    "python-docx>=1.1.2",
    "requests>=2.32.0",
    "pdfminer.six>=20221105",
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black",
    "isort",
    "flake8",
    "mypy",
]
unsloth = [
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
]
wandb = [
    "wandb",
]
trackio = [
    "trackio",
]

[project.urls]
Homepage = "https://github.com/your-username/xyne-llm-play"
Repository = "https://github.com/your-username/xyne-llm-play"
Documentation = "https://github.com/your-username/xyne-llm-play#readme"
"Bug Tracker" = "https://github.com/your-username/xyne-llm-play/issues"

[project.scripts]
xyne-process = "scripts.process_data:main"
xyne-train = "scripts.train:main"
xyne-eval = "scripts.eval:main"
xyne-infer = "scripts.infer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "configs", "chat_templates"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "datasets.*",
    "accelerate.*",
    "peft.*",
    "bitsandbytes.*",
    "evaluate.*",
    "rouge_score.*",
    "sacrebleu.*",
]
ignore_missing_imports = true
